@@ -144,7 +144,8 @@
   <li><a href="sinwav.html">Sine Wave - SINWAV</a><br>
   </li>
   <li><a href="stoch.html">Stochastic - STOCH</a></li>
-  <li><a href="symbol.html">Symbol - SYMBOL</a><br>
+  <li><a href="symbol.html">Symbol - SYMBOL</a></li>
+  <li><a href="talib.html">TALIB - TALIB</a><br>
   </li>
   <li><a href="trix.html">TRIX - TRIX</a></li>
   <li><a href="uo.html">Ultimate Oscillator - UO</a></li>
